--- a/index.html
+++ b/index.html
@@ -540,12 +540,14 @@
                             <div class="row">
                                 <div class="col-12 col-lg-6">
                                     <!-- TODO spostare il logo a sx in linea con gli altri -->
-                                    <img class="play-logo" src="img/play_logo.svg" alt="PlayStation Logo">
+                                    <a href="#">
+                                        <img class="play-logo" src="img/play_logo.svg" alt="PlayStation Logo">
+                                    </a>
                                     <div class="country d-flex pb-5 pt-4">
                                         <img class="globe me-1" src="img/language-globe.svg" alt="Language Globe Pic">
-                                        <p>
+                                        <a class="text-white text-decoration-none" href="#">
                                             Country / Region: Italy
-                                        </p>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="col-12 col-lg-6">
@@ -646,7 +648,7 @@
                         </div>
                         <div class="col-12 col-lg-6">
                             <p>
-                                Website <i class="fa-regular fa-copyright"></i>2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. <a href="#">Maggiori info</a>
+                                Website <i class="fa-regular fa-copyright"></i>2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. <a class="text-white" href="#">Maggiori info</a>
                             </p>
                         </div>
                     </div>
