--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header>
+        <header class="position-fixed w-100 z-i">
             <div id="sony-bar" class="s-bar-bg d-flex justify-content-end align-items-center">
-                <a href="#"><img class="sony-logo" src="img/sony_logo.svg" alt="Sony Logo"></a>
+                <a href="#"><img class="sony-logo py-3 pe-1" src="img/sony_logo.svg" alt="Sony Logo"></a>
             </div>
             <nav class="navbar navbar-light navbar-expand-lg bg-light py-0">
                 <div class="container-fluid">
@@ -124,9 +124,9 @@
                 <div class="my-wrapper">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-12 col-lg-4">
+                            <div class="col-12 col-lg-5">
                                 <img class="w-50 pb-4" src="img/returnal-hero-banner-logo.png" alt="Returnal Logo">
-                                <h2 class="mb-4">
+                                <h2 class="mb-4 display-4">
                                     Rompi il cerchio
                                 </h2>
                                 <p class="mb-4">
@@ -146,7 +146,7 @@
                     <div class="container-fluid">
                         <div class="row g-4">
                             <div class="col-6 col-sm-4 col-lg-2">
-                                <div class="cards">
+                                <div class="card">
                                     <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
                                 </div>
                             </div>
@@ -180,16 +180,16 @@
                 </div>
             </section>
 
-            <section class="play5">
+            <section class="play5 pt-5">
                 <div class="my-wrapper">
                     <div class="container-fluid text-center">
-                        <h6 class="text-uppercase text-clr-b mb-0">
+                        <h6 class="text-uppercase text-clr-b mb-0 fw-bold">
                             play has no limits
                         </h6>
-                        <h2>
+                        <h2 class="display-4 pb-4">
                             Ecco la PlayStation 5
                         </h2>
-                        <p class="text-clr-g">
+                        <p class="text-clr-g pb-5">
                             Tuffati in nuove possibilità di gioco completamente inaspettate
                         </p>
                     </div>
@@ -197,10 +197,10 @@
                         <div class="row">
                             <div class="col-12 col-md-4">
                                 <div>
-                                    <h2>
+                                    <h2 class="display-4 pb-4">
                                         Console PlayStation 5
                                     </h2>
-                                    <p class="text-clr-g">
+                                    <p class="text-clr-g pb-3">
                                         Sperimenta la nuova generazione di incredibili giochi PlayStation
                                     </p>
                                     <a href="#" class="btn b-btn rounded-pill text-white mb-5">
@@ -242,7 +242,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-lg-4">
-                            <h2 class="pb-4">
+                            <h2 class="display-4 pb-4">
                                 Un'avventura cooperativa selvaggia ti attende
                             </h2>
                             <p class="pb-2">
@@ -259,7 +259,7 @@
             <section class="new-releases text-white pb-5 nr-bg">
                 <div class="my-wrapper">
                     <div class="container-fluid">
-                        <h2 class="mb-0 pt-4">
+                        <h2 class="display-4 mb-0 pt-4">
                             Nuove Uscite
                         </h2>
                         <h5 class="py-3">
@@ -371,7 +371,7 @@
             <section class="play4 py-5">
                 <div class="my-wrapper">
                     <div class="container-fluid">
-                        <h2 class="text-center">
+                        <h2 class="display-4 text-center">
                             Esplora PlayStation 4
                         </h2>
                         <p class="text-center text-clr-g">
@@ -384,7 +384,7 @@
                                         <img class="img-fluid" src="img/ps4-slim-homepage-image-block.jpg" alt="">
                                     </div>
                                     <div class="col-12">
-                                        <h2>
+                                        <h2 class="display-4">
                                             PlayStation 4
                                         </h2>
                                         <p class="text-clr-g">
@@ -402,7 +402,7 @@
                                         <img class="img-fluid" src="img/double11-202010-tw-psvr.jpg" alt="">
                                     </div>
                                     <div class="col-12">
-                                        <h2>
+                                        <h2 class="display-4">
                                             PlayStation VR
                                         </h2>
                                         <p class="text-clr-g">
@@ -420,7 +420,7 @@
                                         <img class="img-fluid" src="img/dualshock-4-listing-thumb.jpg" alt="">
                                     </div>
                                     <div class="col-12">
-                                        <h2>
+                                        <h2 class="display-4">
                                             Accessori
                                         </h2>
                                         <p class="text-clr-g">
@@ -463,7 +463,7 @@
             <section class="play-store text-center py-5">
                 <div class="my-wrapper">
                     <div class="container-fluid">
-                        <h2>
+                        <h2 class="display-4">
                             Nuovi sconti sul PlayStation Store
                         </h2>
                         <p class="text-clr-g">
@@ -510,7 +510,7 @@
             <section class="social py-5">
                 <div class="my-wrapper">
                     <div class="container-fluid">
-                        <h3 class="text-center pb-5">
+                        <h3 class="text-center pb-5 display-6">
                             Seguici sui social media
                         </h3>
                         <div class="row justify-content-center gy-5">
