--- a/index.html
+++ b/index.html
@@ -284,28 +284,28 @@
                                 </div>
                             </div>
                             <div class="col-6 col-sm-4 col-lg-2">
-                                <div class="card p-1 rounded-4 card-hover border-0">
-                                    <img class="img-fluid rounded-4" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                                <div class="card p-1 rounded-4 border-0">
+                                    <img class="img-fluid rounded-4 card-hover" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                                 </div>
                             </div>
                             <div class="col-6 col-sm-4 col-lg-2">
-                                <div class="card p-1 rounded-4 card-hover border-0">
-                                    <img class="img-fluid rounded-4" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                                <div class="card p-1 rounded-4 border-0 ">
+                                    <img class="img-fluid rounded-4 card-hover" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
                                 </div>
                             </div>
                             <div class="col-6 col-sm-4 col-lg-2">
-                                <div class="card p-1 rounded-4 card-hover border-0">
-                                    <img class="img-fluid rounded-4" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                                <div class="card p-1 rounded-4 border-0">
+                                    <img class="img-fluid rounded-4 card-hover" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                                 </div>
                             </div>
                             <div class="col-6 col-sm-4 col-lg-2">
-                                <div class="card p-1 rounded-4 card-hover border-0">
-                                    <img class="img-fluid rounded-4" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                                <div class="card p-1 rounded-4 border-0 ">
+                                    <img class="img-fluid rounded-4 card-hover" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
                                 </div>
                             </div>
                             <div class="col-6 col-sm-4 col-lg-2">
-                                <div class="card p-1 rounded-4 card-hover border-0">
-                                    <img class="img-fluid rounded-4" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                                <div class="card p-1 rounded-4 border-0">
+                                    <img class="img-fluid rounded-4 card-hover" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                                 </div>
                             </div>
                         </div>
