--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <img class="w-50" src="img/lens.svg" alt="">
+                                <a class="nav-link text-lg-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <img class="lens" src="img/lens.svg" alt="">
                                 </a>
                             </li>
                         </ul>
