--- a/index.html
+++ b/index.html
@@ -265,10 +265,9 @@
                                 <p class="mb-4 fw-bold">
                                     Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.
                                 </p>
-                                <button type="button" class="btn btn-danger rounded-pill mb-5 fw-bold">
+                                <button type="button" class="btn btn-danger rounded-pill fw-bold mb-5">
                                     Acquista ora
                                 </button>
-
                             </div>
                         </div>
                     </div>
