--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
                                             </a>
                                         </div>
                                     </li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li class="d-inline-block">
+                                        <a class="dropdown-item bg-white" href="#">
+                                            <h6><i class="fa-solid fa-circle pe-1"></i>Indie</h6>
+                                        </a>
+                                    </li>
+                                    <li class="d-inline-block">
+                                        <a class="dropdown-item bg-white" href="#">
+                                            <h6><i class="fa-solid fa-circle pe-1 "></i>Free to Play</h6>
+                                        </a>
+                                    </li>
                                 </ul>
                             </li>
                             <li class="nav-item dropdown position-static">
